--- a/index.html
+++ b/index.html
@@ -9,13 +9,23 @@
 </head>
 <body>
     <header>
-
+        <h1><u>Javascript Quiz - Question #<span class = "question-number">0</span></u></h1>
     </header>
     <main>
+        <div class = "questions" id = "question-header">
 
+        </div>
+        <div class = "answers" id = "answer-choice">
+
+        </div>
+        <div class = "btn-input">
+            <form>
+                <input type ="button" id = "submit-answer" value="Submit Answer" />
+            </form>
+        </div>
     </main>
     <footer>
-        
+
     </footer>
     <script src = "./assets/js/jscript.js"></script>
 </body>
