--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
         <div class = "questions" id = "question-header">
 
         </div>
-        <div class = "answers" id = "answer-choice">
+        <div >
+
+        <ul class = "answers" id = "answer-choice">
+
+        </ul>
 
         </div>
         <div class = "btn-input">
             <form>
-                <input type ="button" id = "submit-answer" value="Submit Answer" />
+                <input type ="button" id = "submit-answer" value="Submit Answer" onclick = "submitAnswer()"/>
             </form>
         </div>
     </main>
