question cycling improvements

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1><u>Javascript Quiz - Question #<span class = "question-number">0</span></u></h1>
+        <h1><u>Javascript Quiz - Question #<span id = "question-number"></span></u></h1>
     </header>
     <main>
         <div class = "questions" id = "question-header">
