--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         </div>
         <div class = "btn-input">
-            <form>
+            <form id = "btn-container">
                 <input type ="button" id = "submit-answer" value="Submit Answer" onclick = "submitAnswer()"/>
             </form>
         </div>
