--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <header>
         <h1><u>Javascript Quiz - Question #<span id = "question-number"></span></u></h1>
+        <div id ="countdown-timer">
+            
+        </div>
     </header>
     <main>
         <div class = "questions" id = "question-header">
