--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
     <header>
         <h1><u>Javascript Quiz - Question #<span id = "question-number"></span></u></h1>
-        <div id ="countdown-timer">
-            
+        <div id ="countdown-timer-container">
+            <h2 id = "countdown-timer">
+                
+            </h2>
         </div>
     </header>
     <main>
