--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1><u>Javascript Quiz - Question #<span id = "question-number"></span></u></h1>
         <div id ="countdown-timer-container">
             <h2 id = "countdown-timer">
-                
+                You have 30 seconds left!
             </h2>
         </div>
     </header>
@@ -20,7 +20,7 @@
         <div class = "questions" id = "question-header">
 
         </div>
-        <div >
+        <div>
 
         <ul class = "answers" id = "answer-choice">
 
